flapivor/tests/tests-m3/hopix/typechecker/good/polymorphism.hopix
fun id ['a] (x : 'a) : 'a = x

val y : int = id [int] (42)