flapivor/tests/tests-m3/hopix/typechecker/bad/id.hopix
val id = (x : 'a) => (x : 'a)